se modifico la parte de index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>myPagi</title>
 </head>
 <body>
-    
+    <header>
+        <h1>este es el encabexado</h1>
+    </header>
+    <section>
+        <h1>este es el estomago</h1>
+        <div class="50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, a nobis ducimus nulla corporis maxime beatae animi modi optio aperiam voluptatum ex odio pariatur recusandae earum dicta aliquam distinctio at.</div>
+    </section>
+        <h2>Pie de pagina</h2>
+    <footer>
+
+    </footer>
 </body>
 </html>
